[workspace]
members = [
    "mystiko_abi",
    "mystiko_abi_generate",
    "mystiko_config",
    "mystiko_core",
    "mystiko_crypto",
    "mystiko_database",
    "mystiko_dataloader",
    "mystiko_downloader",
    "mystiko_ethers",
    "mystiko_etherscan_client",
    "mystiko_fs",
    "mystiko_indexer_client",
    "mystiko_node_rs",
    "mystiko_protocol",
    "mystiko_protos",
    "mystiko_relayer_abi",
    "mystiko_relayer_client",
    "mystiko_relayer_config",
    "mystiko_relayer_server",
    "mystiko_relayer_types",
    "mystiko_roller",
    "mystiko_server_utils",
    "mystiko_storage",
    "mystiko_storage_macros",
    "mystiko_storage_sqlite",
    "mystiko_types",
    "mystiko_utils",
    "mystiko_validator"
]

exclude = []
