[workspace]
members = [
    "mystiko_abi",
    "mystiko_config",
    "mystiko_core",
    "mystiko_database",
    "mystiko_dataloader",
    "mystiko_datapacker_client",
    "mystiko_datapacker_common",
    "mystiko_ethers",
    "mystiko_etherscan_client",
    "mystiko_grpc",
    "mystiko_lib",
    "mystiko_protos",
    "mystiko_protos_macros",
    "mystiko_relayer_abi",
    "mystiko_relayer_client",
    "mystiko_relayer_config",
    "mystiko_relayer_types",
    "mystiko_sequencer_client",
    "mystiko_scheduler",
    "mystiko_storage",
    "mystiko_storage_macros",
    "mystiko_storage_mysql",
    "mystiko_storage_sqlite",
    "mystiko_types",
    "mystiko_utils",
    "mystiko_validator"
]
resolver = "2"

exclude = []
