[workspace]
members = [
    "mystiko_abi",
    "mystiko_core",
    "mystiko_dataloader",
    "mystiko_datapacker_client",
    "mystiko_datapacker_common",
    "mystiko_ethers",
    "mystiko_etherscan_client",
    "mystiko_grpc",
    "mystiko_lib",
    "mystiko_protos",
    "mystiko_protos_macros",
    "mystiko_relayer_client",
    "mystiko_relayer_types",
    "mystiko_sequencer_client",
    "mystiko_scheduler",
    "mystiko_screening_client",
    "mystiko_static_cache",
    "mystiko_status_server",
    "mystiko_storage",
    "mystiko_storage_macros",
    "mystiko_storage_mysql",
    "mystiko_storage_sqlite",
    "mystiko_utils"
]
resolver = "2"

exclude = []
