[package]
name = "mystiko_abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.14" }
ethers-core = { version = "2.0.14" }
ethers-contract = { version = "2.0.14" }
ethers-providers = { version = "2.0.14" }

serde = { version = "1.0.152" }
