[package]
name = "mystiko_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
bip32 = { version = "0.5.2" }
bip39 = { version = "2.1.0", features = ["rand"] }
ethers-contract = { version = "2.0.14" }
ethers-core = { version = "2.0.14" }
ethers-middleware = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", features = ["ws"] }
ethers-signers = { version = "2.0.14" }
futures = { version = "0.3.26" }
itertools = { version = "0.10.5" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.17" }
mystiko_abi = { version = "0.1.0", path = "../mystiko_abi" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "a290629" }
mystiko_crypto = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "1afe17a", features = ["zkp"] }
mystiko_dataloader = { version = "0.1.0", path = "../mystiko_dataloader" }
mystiko_datapacker_client = { version = "0.1.0", path = "../mystiko_datapacker_client" }
mystiko_datapacker_common = { version = "0.1.0", path = "../mystiko_datapacker_common" }
mystiko_sequencer_client = { version = "0.1.0", path = "../mystiko_sequencer_client" }
mystiko_ethers = { version = "0.1.0", path = "../mystiko_ethers", features = ["config"] }
mystiko_grpc = { version = "0.1.0", path = "../mystiko_grpc" }
mystiko_protocol = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "1afe17a" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["ethers", "grpc-client", "mystiko-core-v1", "mystiko-core-handler-v1", "mystiko-core-document-v1", "mystiko-core-scanner-v1", "mystiko-core-synchronizer-v1", "mystiko-storage-v1", "mystiko-service-v1"] }
mystiko_relayer_client = { version = "0.1.0", path = "../mystiko_relayer_client" }
mystiko_screening_client = { version = "0.1.0", path = "../mystiko_screening_client" }
mystiko_relayer_types = { version = "0.1.0", path = "../mystiko_relayer_types" }
mystiko_scheduler = { version = "0.1.0", path = "../mystiko_scheduler" }
mystiko_static_cache = { version = "0.1.0", path = "../mystiko_static_cache", features = ["gzip"] }
mystiko_storage = { version = "0.1.0", path = "../mystiko_storage" }
mystiko_storage_macros = { version = "0.1.0", path = "../mystiko_storage_macros" }
mystiko_types = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "a290629" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = { version = "0.2.15" }
rand = { version = "0.8.5" }
rand_core = { version = "0.6.4", features = ["std"] }
regex = { version = "1.7.3" }
rustc-hex = { version = "2.1.0" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.27.0", features = ["sync", "time"] }
tonic = { version = "0.9.2", features = ["tls"] }
typed-builder = { version = "0.15.2" }
prost = { version = "0.11.9" }
rstest = "0.24.0"

[dev-dependencies]
env_logger = { version = "0.10.0" }
mockall = { version = "0.11.4" }
mockito = { version = "1.1.0" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "a290629", features = ["fs"] }
mystiko_grpc = { version = "0.1.0", path = "../mystiko_grpc", features = ["server"] }
mystiko_storage_sqlite = { version = "0.1.0", path = "../mystiko_storage_sqlite" }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }
rstest = { version = "0.24.0" }