[package]
name = "mystiko_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babyjubjub-rs = { version = "0.0.10" }
ethers = { version = "1.0.2" }
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
lazy_static = { version = "1.4.0" }
num-bigint = { version = "0.4.3" ,features = ["rand"]}
num-integer = { version = "0.1.45" }
num-traits = { version = "0.2.15" }
poseidon-rs = { version = "0.0.8" }
rand = { version = "0.8.5" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "1.0.38" }


zokrates_common = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_ast = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_field = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_interpreter = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_abi = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_proof_systems = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_bellman = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }

mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
