[package]
name = "mystiko_crypto"
version = "0.1.0"
edition = "2021"

#[build-dependencies]
#cc = { version = "1.0.79" }

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
lazy_static = { version = "1.4.0" }
num-bigint = { version = "0.4.3" ,features = ["rand"]}
num-integer = { version = "0.1.45" }
num-traits = { version = "0.2.15" }

# utils
rand = { version = "0.8.5" }
rand_core = { version = "0.6.4", features = ["getrandom" ] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0", features = ["preserve_order"] }

# error
thiserror = { version = "1.0.38" }

# Encryption
aes = { version = "0.8.2" }
babyjubjub-rs = { version = "0.0.10" }
base64 = { version = "0.21.0" }
cbc = { version = "0.1.2",features = ["std"]  }
elliptic-curve = { version = "0.12.3", features = [ "ecdh" ]}
generic-array = { version = "0.14.6" }
k256 = { version = "0.12.0" }

#hash
poseidon-rs = { version = "0.0.8" }
sha2 = { version = "0.10.6"}
sha3 = { version = "0.10.6" }
hmac = { version = "0.12.1"}
md5 = { version = "0.7.0"}

zokrates_common = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_ast = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_field = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_interpreter = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_abi = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_proof_systems = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }
zokrates_bellman = { git = "https://github.com/mystikonetwork/ZoKrates", rev = "d9006cb" }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
