[package]
name = "mystiko_crypto"
version = "0.1.0"
edition = "2021"

#[build-dependencies]
#cc = { version = "1.0.79" }

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
lazy_static = { version = "1.4.0" }
num-bigint = { version = "0.4.3" ,features = ["rand"]}
num-integer = { version = "0.1.45" }
num-traits = { version = "0.2.15" }
anyhow = { version = "1.0.69" }

# utils
rand = { version = "0.8", package = "rand" }
rand_core = { version = "0.6.4", features = ["getrandom" ] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0", features = ["preserve_order"] }

# error
thiserror = { version = "1.0.38" }

# Encryption
aes = { version = "0.8.2" }
babyjubjub-rs = { version = "0.0.10" }
base64 = { version = "0.21.0" }
cbc = { version = "0.1.2",features = ["std"]  }
elliptic-curve = { version = "0.13.5", features = [ "ecdh" ]}
generic-array = { version = "0.14.6" }
k256 = { version = "0.13.1" }

#hash
poseidon-rs = { version = "0.0.8" }
sha2 = { version = "0.10.6"}
sha3 = { version = "0.10.6" }
blake2 = { version = "0.10.6"}
hmac = { version = "0.12.1"}
md5 = { version = "0.7.0"}

pest-ast = "=0.3.3"
zokrates_common = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7" }
zokrates_ast = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7" }
zokrates_field = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7", features = ["multicore"] }
zokrates_interpreter = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7" }
zokrates_abi = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7" }
zokrates_proof_systems = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7" }
zokrates_bellman = { git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.7", features = ["multicore"] }

[dev-dependencies]
mystiko_fs = { version = "0.1.0", path = "../mystiko_fs" }
tokio = { version = "1.26.0", features = ["macros", "rt", "full", "test-util"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "mystiko_crypto_bench"
harness = false