[package]
name = "mystiko_database"
version = "0.1.0"
edition = "2021"

[features]
default = []
loader = ["mystiko_config", "mystiko_dataloader", "mystiko_utils"]

[dependencies]
anyhow = { version = "1.0.69" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config", optional = true }
mystiko_dataloader = { version = "0.1.0", path = "../mystiko_dataloader", optional = true }
mystiko_storage = { version = "0.1.0", path = "../mystiko_storage" }
mystiko_storage_macros = { version = "0.1.0", path = "../mystiko_storage_macros" }
mystiko_types = { version = "0.1.0", path = "../mystiko_types" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-data-v1", "mystiko-storage-v1","mystiko-core-document-v1"] }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils", optional = true }
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }

[dev-dependencies]
mystiko_config = { version = "0.1.0", path = "../mystiko_config", features = ["fs"] }
mystiko_database = { version = "*", path = ".", features = ["loader"] }
mystiko_storage_sqlite = { version = "0.1.0", path = "../mystiko_storage_sqlite" }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }