[package]
name = "mystiko_dataloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
ethers-contract  = { version = "2.0.4" }
ethers-core = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
futures = { version = "0.3.28" }
hex = { version = "0.4.3" }
log = { version = "0.4.17" }
mystiko_abi = { version = "0.1.0", path = "../mystiko_abi" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config" }
mystiko_crypto = { version = "0.1.0", path = "../mystiko_crypto" }
mystiko_ethers = { version = "0.1.0", path = "../mystiko_ethers" }
mystiko_etherscan_client = { version = "0.1.0", path = "../mystiko_etherscan_client" }
mystiko_indexer_client = { version = "0.1.0", path = "../mystiko_indexer_client" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos" }
mystiko_types = { version = "0.1.0", path = "../mystiko_types" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
num-bigint = { version = "0.4.3" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.26.0", features = ["sync"] }
typed-builder = { version = "0.14.0" }

[dev-dependencies]
env_logger = { version = "0.10.0" }
mockall = { version = "0.11.4" }
mockito = { version = "0.32.4" }
mystiko_fs = { version = "0.1.0", path = "../mystiko_fs" }

