[package]
name = "mystiko_dataloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
ethers-contract  = { version = "2.0.4" }
ethers-core = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
futures = { version = "0.3.28" }
log = { version = "0.4.17" }
mystiko_abi = { version = "0.1.0", path = "../mystiko_abi" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config" }
mystiko_crypto = { git = "ssh://git@github.com/mystikonetwork/mystiko-protocol.git", rev = "72c319d" }
mystiko_datapacker_client = { version = "0.1.0", path = "../mystiko_datapacker_client" }
mystiko_ethers = { version = "0.1.0", path = "../mystiko_ethers" }
mystiko_etherscan_client = { version = "0.1.0", path = "../mystiko_etherscan_client" }
mystiko_sequencer_client = { version = "0.1.0", path = "../mystiko_sequencer_client" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-common-v1", "mystiko-data-v1", "mystiko-loader-v1"] }
mystiko_storage = { version = "0.1.0", path = "../mystiko_storage" }
mystiko_storage_macros = { version = "0.1.0", path = "../mystiko_storage_macros" }
mystiko_types = { version = "0.1.0", path = "../mystiko_types" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
num-bigint = { version = "0.4.3" }
rustc-hex = { version = "2.1.0" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.27.0", features = ["sync"] }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
env_logger = { version = "0.10.0" }
mockall = { version = "0.11.4" }
mockito = { version = "1.1.0" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config", features = ["fs"] }
mystiko_storage_sqlite = { version = "0.1.0", path = "../mystiko_storage_sqlite" }
tokio = { version = "1.27.0", features = ["fs", "io-util", "io-std"] }
rand = { version = "0.8.5" }
