[package]
name = "mystiko_datapacker_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
ethers-core = { version = "2.0.14" }
futures = { version = "0.3" }
log = { version = "0.4.17" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "a290629" }
mystiko_datapacker_common = { version = "0.1.0", path = "../mystiko_datapacker_common" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-data-v1"] }
mystiko_types = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "a290629" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
prost = { version = "0.11.9" }
reqwest = { version = "0.11.14", features = ["stream", "rustls-tls"], default-features = false }
rustc-hex = { version = "2.1.0" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
env_logger = { version = "0.10.0" }
mockito = { version = "1.1.0" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-static-config.git", rev = "a290629", features = ["fs"] }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
num-bigint = { version = "0.4.3" }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }
