[package]
name = "mystiko_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-compression = { version = "0.4.1", features = ["gzip", "tokio"] }
blake2 = { version = "0.10.6" }
digest = { version = "0.10.6" }
hex = { version = "0.4.3" }
reqwest = { version = "0.11.14", features = ["stream", "rustls-tls"], default-features = false }
tokio = { version = "1.26.0", features = ["fs", "io-std"] }
tokio-util = { version = "0.7.7" }
tokio-stream = { version = "0.1.12" }

[dev-dependencies]
flate2 = { version = "1.0.25" }
mockito = { version = "1.1.0" }
tempfile = { version = "3.4.0" }
tokio = { version = "1.26.0", features = ["test-util"] }