[package]
name = "mystiko_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
ethers-providers = { version = "2.0.2", features = ["ws"] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.26.0", features = ["time"] }
