[package]
name = "mystiko_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
ethers-core = { version = "2.0.4" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
futures-core = { version = "0.3.28" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.7.1" }
reqwest = { version = "0.11.14" }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.26.0", features = ["time"] }
typed-builder = { version = "0.14.0" }

[dev-dependencies]
futures-util = { version = "0.3.28", features = ["sink"] }
mockall = { version = "0.11.4" }
mockito = { version = "0.32.4" }
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
tokio-tungstenite = { version = "0.18.0" }
