[package]
name = "mystiko_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
ethers-providers = { version = "2.0.4", features = ["ws"] }
futures-core = { version = "0.3.28" }
lazy_static = { version = "1.4.0" }
mystiko_config = { version = "0.1.0", path = "../mystiko_config", optional = true }
mystiko_types = { version = "0.1.0", path = "../mystiko_types", optional = true }
regex = { version = "1.7.1" }
reqwest = { version = "0.11.14", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.27.0", features = ["time", "sync"] }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
futures-util = { version = "0.3.28", features = ["sink"] }
mockall = { version = "0.11.4" }
mockito = { version = "1.1.0" }
mystiko_utils = { version = "0.1.0", path = "../mystiko_utils" }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }
tokio-tungstenite = { version = "0.20.0" }

[features]
default = []
config = ["dep:mystiko_config", "dep:mystiko_types"]
