[package]
name = "mystiko_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-compression = { version = "0.4.1", features = ["gzip", "tokio"] }
tokio = { version = "1.26.0", features = ["fs", "io-util", "io-std"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }