[package]
name = "mystiko_grpc"
version = "0.1.0"
edition = "2021"

[features]
default = []
fs = ["dep:tokio"]

[dependencies]
anyhow = { version = "1.0.69" }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-service-v1"] }
tokio = { version = "1.27.0", optional = true, features = ["fs"] }
tonic = { version = "0.9.2", features = ["tls"] }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
mystiko_grpc = { version = "*", path = ".", features = ["fs"] }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-testing-v1", "grpc-server", "grpc-client"] }
rcgen = { version = "0.11.1" }
tempfile = { version = "3.7.1" }
tokio = { version = "1.27.0", features = ["sync", "macros", "rt", "test-util"] }
tonic-web = { version = "0.9.2" }