[package]
name = "mystiko_grpc"
version = "0.1.0"
edition = "2021"

[features]
default = []
fs = ["tokio/fs"]
server = ["mystiko_protos/grpc-server", "bytes", "http-body", "tower-layer", "tonic-web"]

[dependencies]
anyhow = { version = "1.0.69" }
bytes = { version = "1.4.0", optional = true }
http = { version = "0.2.9" }
http-body = { version = "0.4.5", optional = true }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-service-v1"] }
tokio = { version = "1.27.0", features = ["sync"] }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tonic-web = { version = "0.9.2", optional = true }
tower-layer = { version = "0.3.2", optional = true }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
hyper = { version = "0.14.27" }
mockall = { version = "0.11.4" }
mystiko_grpc = { version = "*", path = ".", features = ["fs", "server"] }
mystiko_protos = { version = "0.1.0", path = "../mystiko_protos", default-features = false, features = ["mystiko-testing-v1", "grpc-server", "grpc-client"] }
prost = { version = "0.11.9" }
rcgen = { version = "0.11.1" }
tempfile = { version = "3.7.1" }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }