[package]
name = "mystiko_indexer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.64" }
reqwest = { version = "0.11", features = ["json"] }
futures = { version = "0.3" }
mystiko_database = { version = "0.1.0", path = "../mystiko_database" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mockito = { version = "0.32.4" }
base64 = { version = "0.21.0" }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }